last edit before submit

--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
-\section{Structure and Organization}
+\section{The Structure and Organization}
 
 The NumNN.jl  package%\footnote{The Software Toolkit presented in this paper will be made available when paper is accepted}% \url{https://github.com/MohHizzani/NumNN.jl}} 
- (library) was built on the concept of Rapid Prototyping to enable fast experimentation. \emph{Begin able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are many deeplearning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation in adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k} neither of them fully support newly added types, and do not provide the flexibility of different types for different parameters or to deliver output with certain desired data types. While NumNN.jl provides a fully support for a total in one type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type.
+ (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are many deeplearning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k} neither of them fully support newly added types, and do not provide the flexibility of different types for different parameters or to deliver output with a certain desired data type. NumNN.jl provides a fully support for a total in one type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{ NumNN.jl will be made available upon the acceptance  of this paper.}.
 
 \subsection{Fast Implementation and Deployment}
 
@@ -31,16 +31,18 @@ where \mintinline[fontsize=\footnotesize]{julia}{X_train} is the train array or 
 
 \subsection{Structure and Architecture}\label{subsec:saa}
 
-The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when require. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the use and the future development of NumNN.jl.
+The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when required. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the usage and the future developments of NumNN.jl. The supertype of all layers is the \mintinline{julia}{Layer} type, layers of the green color are single-layer-input (i.e. only the output of one layer can be passed to these layers) general use layers. Input, is the input layer, where all inputs should be passed as arrays to this layer of any network. FCLayer is a fully-connected layer, where Activation holds activation functions to be applied at its input. BatchNorm is used to normalize the input of this layer across any dimension of features (e.g. for a 2D CNN this BatchNorm can normalize the input of any of the first three dimensions the first two spacial dimensions or the third dimension, the channels dimension). Flatten layers is used to "flatten" the input of any CNN layers (any subtype of PaddableLayer) into a 2 dimension data to be fed into a FCLayer.
 
-The convention of data shape to be used is (data dimension(s), channels, batch size). For instance, when using MNIST \cite{LeCun1998,LeCun1998a} data set, the shape of training data will be (28,28,1,60000), where the first two dimensions are the images' dimensions while the third is the number of channels and the last integer expresses the batch size.
+Layers of red color (MILayer) are multi-input layers (i.e. it input is an array of layer(s)), for instance, AddLayer performs an addition to the output of all its input layers (array), and ConcatLayer concatenate its array input of layers across a selected dimension. Blue layers are CNN layers with its supertype is PaddableLayer which indicate that all subtype layers can be padded with zeros across the spacial dimensions. ConvLayers perform 1, 2, or 3 dimensional convolution operation. PoolLayers perform both pooling operations either Max Pooling, or Average Pooling also on 1, 2, or 3 dimensional CNNs.
+
+The convention to be for data shape used is (data dimension(s), channels, batch size). For instance, when using the MNIST \cite{LeCun1998,LeCun1998a} data set, the shape of training data will be (28,28,1,60000), where the first two dimensions are the images' dimensions, the third one is the number of channels, and the last integer expresses the batch size.
 
 \begin{figure}[!ht]
 	\centering
 	%\begin{subfigure}{0.95\textwidth}
 		\input{typetree}
 	%\end{subfigure}
-	\caption{Layer Architecture in NumNN.jl, the useable layers are the leaves the other nodes are \mintinline[fontsize=\footnotesize]{julia}{abstract type}s.}\label{fig:layerstruct}
+	\caption{Layer Architecture in NumNN.jl, the useable layers are the leaves and the other nodes are \mintinline[fontsize=\footnotesize]{julia}{abstract type}s as a supertype (parent) of the subtypes (children).}\label{fig:layerstruct}
 \end{figure}
 
 An essential data type (\mintinline[fontsize=\footnotesize]{julia}{Model}) holds the main pointers to the layers, structure and parameters to use. Instantiating a (\mintinline[fontsize=\footnotesize]{julia}{Model}) will also invoke the initialization of the layers scaling and bias parameters, which can be done as presented in Listing~\ref{modelinit}.
@@ -86,10 +88,10 @@ An essential data type (\mintinline[fontsize=\footnotesize]{julia}{Model}) holds
 \begin{figure}[!h]
 	\centering
 	\input{incep}
-	\caption{Listing~\ref{chain} Layers' representation for the first 3 lines}\label{fig:inc}
+	\caption{Representation for the first 3 lines of Listing~\ref{chain}.}\label{fig:inc}
 \end{figure}
 
-Activation functions are defined under the \mintinline[fontsize=\footnotesize]{julia}{abstract type actFun}. NumNN.jl provides a set of activation functions (sigmoid ($\sigma$), \mintinline{julia}{tanh}, \mintinline[fontsize=\footnotesize]{julia}{softmax} and \mintinline[fontsize=\footnotesize]{julia}{noAct}). Any other activation function can be defined as a subtype of \mintinline[fontsize=\footnotesize]{julia}{actFun}, and then as a normal function with another function for its derivative. For instance, $\sin$ has to be added as an activation function, all what is needed is expressed in Listing~\ref{newact}.
+Activation functions are defined under the \mintinline[fontsize=\footnotesize]{julia}{abstract type actFun}. NumNN.jl provides a set of activation functions (sigmoid ($\sigma$), \mintinline{julia}{tanh}, \mintinline[fontsize=\footnotesize]{julia}{softmax} and \mintinline[fontsize=\footnotesize]{julia}{noAct}). Any other activation function can be defined as a subtype of \mintinline[fontsize=\footnotesize]{julia}{actFun}, and then uses another function for its derivative. For instance, the process of adding the $\sin$ function as an activation function is expressed in Listing~\ref{newact}.
 
 \begin{listing}[!ht]
 	\begin{minted}{julia}
@@ -101,21 +103,24 @@ Activation functions are defined under the \mintinline[fontsize=\footnotesize]{j
 	\caption{Example of defining a new activation function to NumNN.jl}\label{newact}
 \end{listing}
 
-NumNN.jl has loss functions under the \mintinline{julia}{abstract type lossFun}. The two main loss functions defined are the \mintinline{julia}{binaryCrossentropy} and \mintinline{julia}{categoricalCrossentropy}. Also, other loss functions can be easily defined, more functions will be available in the upcoming versions of NumNN.jl.
+NumNN.jl has loss functions under the \mintinline{julia}{abstract type lossFun}. The two main loss functions defined are the \mintinline{julia}{binaryCrossentropy} and \mintinline{julia}{categoricalCrossentropy}. Other loss functions can be easily defined, more functions will be available in the upcoming versions of NumNN.jl.
 
 %\subsection{Sequence of Processes}
 %The easiest way of explaining NumNN.jl is by showing a complete example. 
 
 \subsection{Training, Testing and Evaluating}
-To show the effectiveness of NumNN.jl some examples with benchmarks are applied, and accompanied with comparison with another library is presented. Keras on the top of TensorFlow was one of the main influencers upon the syntax of NumNN.jl. Thus, some benchmarks were run on both NumNN and TensorFlow. Nonetheless, some of the benchmarks could not be run on TensorFlow due to lack support for new data types, therefore, they were run only on NumNN.jl.
+To show the effectiveness of NumNN.jl, some examples with benchmarks are applied and comparative assessment with another library is presented. Keras \cite{Collet2015} on the top of TensorFlow was one of the main influencers upon the syntax of NumNN.jl. Thus, some benchmarks were run on both NumNN and TensorFlow. Nonetheless, some of the benchmarks could not be run on TensorFlow due to lack support for new data types, therefore, they were run only on NumNN.jl.
 
-The data used for train/test was Fashion MNIST \cite{Xiao2017}. Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU were used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test%\footnote{%All benchmarks are available at \url{https://github.com/MohHizzani/NumNN.jl/tree/master/examples}
+The data used for train/test was Fashion MNIST \cite{Xiao2017}. Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU was used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test%\footnote{%All benchmarks are available at \url{https://github.com/MohHizzani/NumNN.jl/tree/master/examples}
 %All codes where provided with the paper submit and after acceptance they will be available online}
-, and where blank is present that means test was not perform under this framework because the data type is not supported\footnote{\label{batchnorm}Benchmark 2 \& 3 has Batch Normalization layer where Float64 is not supported for this layer in TensorFlow}. All benchmarks perform the classification for the Fashion MNIST data using \mintinline{julia}{softmax} as an output layer and \mintinline{julia}{categoricalCrossentropy} as a loss function. Hence, cost is an average of the loss function over all the predicted data. Accuracy was computed as:
+, and where blank is present that means the test was not performed under that particular framework because the data type is not supported\footnote{\label{batchnorm}Benchmark 2 \& 3 has Batch Normalization layer where Float64 is not supported for this layer in TensorFlow}. All benchmarks perform the classification for the Fashion MNIST data using \mintinline{julia}{softmax} as an output layer and \mintinline{julia}{categoricalCrossentropy} as a loss function. Hence, cost is an average of the loss function over all the predicted data, the less the value of cost the better. Accuracy was computed as:
 
 \begin{equation}
 \textrm{accuracy} = \frac{\textrm{number of correct predictions}}{\textrm{total number of testing labels}}
 \end{equation}
+
+The higher the value of accuracy (the closer to one) the better the performance.
+
 
 \begin{table}[!htbp]
 	\centering
@@ -172,4 +177,4 @@ The data used for train/test was Fashion MNIST \cite{Xiao2017}. Intel(R) Xeon(R)
 	\end{tabular}
 \end{table}
 
-As presented in Table~\ref{tab:bench}, NumNN was faster in training than TensorFlow under the same layers' architecture, using the same data set, and running on the same hardware. Accuracies of benchmarks were very close with few difference margin which is a result of the randomness of shuffling the training data each time, and initializing the trainable parameters of each layers.
+As presented in Table~\ref{tab:bench}, NumNN is faster in training than TensorFlow under the same layers' architecture, using the same data set, and running on the same hardware. Training Time per Sample was presented in Table~\ref{tab:bench} for Float64 and Float32 only because they are the only data types that have hardware support. Accuracies and Costs for both training and testing data sets of benchmarks were very close with few difference margin, which is a result of the randomness of shuffling the training data each time, and initializing the trainable parameters of each of the layers.
