--- a/typetree.tex
+++ b/typetree.tex
@@ -29,6 +29,7 @@ level 3/.append style={level distance=2.3cm, sibling angle=70
 },
 level 4/.append style={level distance=1.8cm,sibling angle=60
 }
+%,scale=0.6, every node/.style={scale=0.6}
 %scale=0.9, transform canvas={scale=0.9}
 ]
 \node[scale=0.8]{\LARGE Layer}
