last after linux

--- a/body.tex
+++ b/body.tex
@@ -1,4 +1,4 @@
-\section{The Structure and Organization}
+\section{Structure and Organization}
 
 The NumNN.jl  package%\footnote{The Software Toolkit presented in this paper will be made available when paper is accepted}% \url{https://github.com/MohHizzani/NumNN.jl}} 
  (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are many deeplearning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k} neither of them fully support newly added types, and do not provide the flexibility of different types for different parameters or to deliver output with a certain desired data type. NumNN.jl provides a fully support for a total in one type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{ NumNN.jl will be made available upon the acceptance  of this paper.}.
@@ -31,7 +31,7 @@ where \mintinline[fontsize=\footnotesize]{julia}{X_train} is the train array or 
 
 \subsection{Structure and Architecture}\label{subsec:saa}
 
-The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when required. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the usage and the future developments of NumNN.jl. The supertype of all layers is the \mintinline{julia}{Layer} type, layers of the green color are single-layer-input (i.e. only the output of one layer can be passed to these layers) general use layers. Input, is the input layer, where all inputs should be passed as arrays to this layer of any network. FCLayer is a fully-connected layer, where Activation holds activation functions to be applied at its input. BatchNorm is used to normalize the input of this layer across any dimension of features (e.g. for a 2D CNN this BatchNorm can normalize the input of any of the first three dimensions the first two spacial dimensions or the third dimension, the channels dimension). Flatten layers is used to "flatten" the input of any CNN layers (any subtype of PaddableLayer) into a 2 dimension data to be fed into a FCLayer.
+The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when required. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the usage and the future developments of NumNN.jl. The supertype of all layers is the \mintinline{julia}{Layer} type, layers of the green color are single-layer-input (i.e. only the output of one layer can be passed to these layers) general use layers. Input, is the input layer, where all inputs should be passed as arrays to this layer of any network. FCLayer is a fully-connected layer, where Activation holds activation functions to be applied at its input. BatchNorm is used to normalize the input of this layer across any dimension of features (e.g. for a 2D CNN this BatchNorm can normalize the input of any of the first three dimensions the first two spacial dimensions or the third dimension, the channels dimension). Flatten layers is used to \emph{flatten} the input of any CNN layers (any subtype of PaddableLayer) into a 2 dimension data to be fed into a FCLayer.
 
 Layers of red color (MILayer) are multi-input layers (i.e. it input is an array of layer(s)), for instance, AddLayer performs an addition to the output of all its input layers (array), and ConcatLayer concatenate its array input of layers across a selected dimension. Blue layers are CNN layers with its supertype is PaddableLayer which indicate that all subtype layers can be padded with zeros across the spacial dimensions. ConvLayers perform 1, 2, or 3 dimensional convolution operation. PoolLayers perform both pooling operations either Max Pooling, or Average Pooling also on 1, 2, or 3 dimensional CNNs.
 
