--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
 \section{Structure and Organization}
 
 The NumNN.jl  package%\footnote{The Software Toolkit presented in this paper will be made available when paper is accepted}% \url{https://github.com/MohHizzani/NumNN.jl}} 
- (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are many deeplearning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k} neither of them fully support newly added types, and do not provide the flexibility of different types for different parameters or to deliver output with a certain desired data type. NumNN.jl provides a fully support for a total in one type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{ NumNN.jl will be made available upon the acceptance  of this paper.}.
+ (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are many deeplearning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k} neither of them fully support newly added types, and do not provide the flexibility of different types for different parameters or to deliver output with a certain desired data type. NumNN.jl provides a fully support for a total in-one-type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{Online link of NumNN.jl will be made available upon the acceptance  of this paper.}.
 
 \subsection{Fast Implementation and Deployment}
 
@@ -31,9 +31,9 @@ where \mintinline[fontsize=\footnotesize]{julia}{X_train} is the train array or 
 
 \subsection{Structure and Architecture}\label{subsec:saa}
 
-The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when required. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the usage and the future developments of NumNN.jl. The supertype of all layers is the \mintinline{julia}{Layer} type, layers of the green color are single-layer-input (i.e. only the output of one layer can be passed to these layers) general use layers. Input, is the input layer, where all inputs should be passed as arrays to this layer of any network. FCLayer is a fully-connected layer, where Activation holds activation functions to be applied at its input. BatchNorm is used to normalize the input of this layer across any dimension of features (e.g. for a 2D CNN this BatchNorm can normalize the input of any of the first three dimensions the first two spacial dimensions or the third dimension, the channels dimension). Flatten layers is used to \emph{flatten} the input of any CNN layers (any subtype of PaddableLayer) into a 2 dimension data to be fed into a FCLayer.
+The structure of NumNN.jl is simple enough to comprehend and start to amending new elements when required. \figurename~\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the usage and the future developments of NumNN.jl. The supertype of all layers is the {Layer} type, layers of the green color are single-layer-input (i.e. only the output of one layer can be passed to these layers) general use layers. Input, is the input layer of any neural network, where all inputs should be passed as arrays to this layer of any network. FCLayer is a fully-connected layer, and Activation layer holds activation functions to be applied on its input. BatchNorm is used to normalize the input of this layer across any dimension of features (e.g. for a 2D CNN this layer can normalize the input of any of the first three dimensions, the first two spacial dimensions or the third dimension, the channels dimension). Flatten layers is used to \emph{flatten} the input of any CNN layers (any subtype of PaddableLayer) into a 2 dimension data to be fed into a FCLayer.
 
-Layers of red color (MILayer) are multi-input layers (i.e. it input is an array of layer(s)), for instance, AddLayer performs an addition to the output of all its input layers (array), and ConcatLayer concatenate its array input of layers across a selected dimension. Blue layers are CNN layers with its supertype is PaddableLayer which indicate that all subtype layers can be padded with zeros across the spacial dimensions. ConvLayers perform 1, 2, or 3 dimensional convolution operation. PoolLayers perform both pooling operations either Max Pooling, or Average Pooling also on 1, 2, or 3 dimensional CNNs.
+Layers of red color (MILayer) are multi-input layers (i.e. it input is an array of layer(s)). For instance, AddLayer performs an addition to the output of all its input layers (array), and ConcatLayer concatenate its array input of layers across a selected dimension. Blue layers are CNN layers with its supertype is PaddableLayer which indicates that all subtype layers can be padded with zeros across the spacial dimensions. ConvLayers perform 1, 2, or 3 dimensional convolution operation, and PoolLayers perform any of the pooling operations either Max Pooling, or Average Pooling also on 1, 2, or 3 dimensional CNNs.
 
 The convention to be for data shape used is (data dimension(s), channels, batch size). For instance, when using the MNIST \cite{LeCun1998,LeCun1998a} data set, the shape of training data will be (28,28,1,60000), where the first two dimensions are the images' dimensions, the third one is the number of channels, and the last integer expresses the batch size.
 
@@ -111,45 +111,46 @@ NumNN.jl has loss functions under the \mintinline{julia}{abstract type lossFun}.
 \subsection{Training, Testing and Evaluating}
 To show the effectiveness of NumNN.jl, some examples with benchmarks are applied and comparative assessment with another library is presented. Keras \cite{Collet2015} on the top of TensorFlow was one of the main influencers upon the syntax of NumNN.jl. Thus, some benchmarks were run on both NumNN and TensorFlow. Nonetheless, some of the benchmarks could not be run on TensorFlow due to lack support for new data types, therefore, they were run only on NumNN.jl.
 
-The data used for train/test was Fashion MNIST \cite{Xiao2017}. Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU was used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test%\footnote{%All benchmarks are available at \url{https://github.com/MohHizzani/NumNN.jl/tree/master/examples}
+The data used for train/test was Fashion MNIST \cite{Xiao2017}, and Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU was used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test\footnote{All benchmarks' codes were submitted as supplementary files and upon the acceptance of this paper an online link will be available.}
+%\footnote{%All benchmarks are available at \url{https://github.com/MohHizzani/NumNN.jl/tree/master/examples}
 %All codes where provided with the paper submit and after acceptance they will be available online}
 , and where blank is present that means the test was not performed under that particular framework because the data type is not supported\footnote{\label{batchnorm}Benchmark 2 \& 3 has Batch Normalization layer where Float64 is not supported for this layer in TensorFlow}. All benchmarks perform the classification for the Fashion MNIST data using \mintinline{julia}{softmax} as an output layer and \mintinline{julia}{categoricalCrossentropy} as a loss function. Hence, cost is an average of the loss function over all the predicted data, the less the value of cost the better. Accuracy was computed as:
 
 \begin{equation}
-\textrm{accuracy} = \frac{\textrm{number of correct predictions}}{\textrm{total number of testing labels}}
+\textrm{accuracy} = \frac{\textrm{number of correct predictions}}{\textrm{total number of data set's labels}}
 \end{equation}
 
-The higher the value of accuracy (the closer to one) the better the performance.
+The higher the value of accuracy is (the closer to one) the better the performance.
 
 
-\begin{table}[!htbp]
+\begin{table}[!htb]
 	\centering
 	\renewcommand{\arraystretch}{1.1}
-	\caption{Various benchmarks for NumNN.jl and TensorFlow}\label{tab:bench}
+	\caption{Various benchmarks for NumNN.jl and TensorFlow, best results across each row were highlighted.}\label{tab:bench}
 	\begin{tabular}{|c | c | c || c | c |}
 		\hline
 		Benchmark & DType & Measurements & NumNN.jl & Tensorflow\\\hline\hline
 		%%%%%%%%%% Benchmark 1
-		\multirow{14}{*}{Benchmark 1} & \multirow{5}{*}{Float32} & Train Accuracy & 0.8902 & 0.9162\\
-		& & Test Accuracy & 0.8650 & 0.8851\\
-		& & Train Cost & 0.3000 & 0.2270\\
-		& & Test Cost & 0.3728 & 0.3444\\
-		& & Training Time / Sample & $84\mu$s  & $177\mu$s\\\cline{2-5}
-		& \multirow{5}{*}{Float64} & Train Accuracy & 0.8812 & 0.9191 \\
-		& & Test Accuracy & 0.8703 & 0.8848 \\
-		& & Train Cost & 0.3314 & 0.2163 \\
-		& & Test Cost & 0.3845 & 0.3311 \\
-		& & Training Time / Sample & $93\mu$s & $100\mu$s\\\cline{2-5}
+		\multirow{14}{*}{Benchmark 1} & \multirow{5}{*}{Float32} & Train Accuracy & 0.8902 & \textbf{0.9162}\\
+		& & Test Accuracy & 0.8650 & \textbf{0.8851}\\
+		& & Train Cost & 0.3000 & \textbf{0.2270}\\
+		& & Test Cost & 0.3728 & \textbf{0.3444}\\
+		& & Training Time / Sample & \textbf{$\mathbf{84\mu}$}s  & $177\mu$s\\\cline{2-5}
+		& \multirow{5}{*}{Float64} & Train Accuracy & 0.8812 & \textbf{0.9191} \\
+		& & Test Accuracy & 0.8703 & \textbf{0.8848} \\
+		& & Train Cost & 0.3314 & \textbf{0.2163} \\
+		& & Test Cost & 0.3845 & \textbf{0.3311} \\
+		& & Training Time / Sample & \textbf{$\mathbf{93\mu}$}s & $100\mu$s\\\cline{2-5}
 		& \multirow{4}{*}{Posit\{16,1\}} & Train Accuracy & 0.8716 & \rule{5em}{1pt} \\
 		& & Test Accuracy & 0.8510 & \rule{5em}{1pt} \\
 		& & Train Cost & 0.3520 & \rule{5em}{1pt} \\
 		& & Test Cost & 0.4088 & \rule{5em}{1pt} \\\hline
 		%%%%%%%%%% Benchmark 2
-		\multirow{14}{*}{Benchmark 2\footref{batchnorm}} & \multirow{5}{*}{Float32} & Train Accuracy & 0.8980 & 0.9160\\
-		& & Test Accuracy & 0.8786 & 0.8929\\
-		& & Train Cost & 0.2760 & 0.2346\\
-		& & Test Cost & 0.3386 & 0.2955\\
-		& & Training Time / Sample & $1.31m$s & $8m$s \\\cline{2-5}
+		\multirow{14}{*}{Benchmark 2\footref{batchnorm}} & \multirow{5}{*}{Float32} & Train Accuracy & 0.8980 & \textbf{0.9160}\\
+		& & Test Accuracy & 0.8786 & \textbf{0.8929}\\
+		& & Train Cost & 0.2760 & \textbf{0.2346}\\
+		& & Test Cost & 0.3386 & \textbf{0.2955}\\
+		& & Training Time / Sample & \textbf{$\mathbf{1.31}m$}s & $8m$s \\\cline{2-5}
 		& \multirow{5}{*}{Float64} & Train Accuracy & 0.9020 & \rule{5em}{1pt} \\
 		& & Test Accuracy & 0.8857 & \rule{5em}{1pt} \\
 		& & Train Cost & 0.2750 & \rule{5em}{1pt} \\
@@ -160,11 +161,11 @@ The higher the value of accuracy (the closer to one) the better the performance.
 		& & Train Cost & 0.2453 & \rule{5em}{1pt} \\
 		& & Test Cost & 0.3045 & \rule{5em}{1pt} \\\hline
 		%%%%%%%%%% Benchmark 3
-		\multirow{14}{*}{Benchmark 3\footref{batchnorm}} & \multirow{5}{*}{Float32} & Train Accuracy & 0.9136 & 0.9072\\
-		& & Test Accuracy & 0.8953 & 0.8899\\
-		& & Train Cost & 0.2362 & 0.2527\\
-		& & Test Cost & 0.2962 & 0.3050\\
-		& & Training Time / Sample & $3.09m$s & $14m$s\\\cline{2-5}
+		\multirow{14}{*}{Benchmark 3\footref{batchnorm}} & \multirow{5}{*}{Float32} & Train Accuracy & \textbf{0.9136} & 0.9072\\
+		& & Test Accuracy & \textbf{0.8953} & 0.8899\\
+		& & Train Cost & \textbf{0.2362} & 0.2527\\
+		& & Test Cost & \textbf{0.2962} & 0.3050\\
+		& & Training Time / Sample & \textbf{$\mathbf{3.09}m$}s & $14m$s\\\cline{2-5}
 		& \multirow{5}{*}{Float64} & Train Accuracy & 0.9103 & \rule{5em}{1pt} \\
 		& & Test Accuracy & 0.8926 & \rule{5em}{1pt} \\
 		& & Train Cost & 0.2480 & \rule{5em}{1pt} \\
@@ -177,4 +178,4 @@ The higher the value of accuracy (the closer to one) the better the performance.
 	\end{tabular}
 \end{table}
 
-As presented in Table~\ref{tab:bench}, NumNN is faster in training than TensorFlow under the same layers' architecture, using the same data set, and running on the same hardware. Training Time per Sample was presented in Table~\ref{tab:bench} for Float64 and Float32 only because they are the only data types that have hardware support. Accuracies and Costs for both training and testing data sets of benchmarks were very close with few difference margin, which is a result of the randomness of shuffling the training data each time, and initializing the trainable parameters of each of the layers.
+As presented in Table~\ref{tab:bench}, NumNN is faster in training than TensorFlow under the same layers' architecture, using the same data set, and running on the same hardware. Training Time per Sample was presented in Table~\ref{tab:bench} for Float64 and Float32 only because they are the only data types that have hardware support. Accuracies and Costs for both training and testing data sets of benchmarks were very close between NumNN and TensorFlow with few difference margin, which is a result of the randomness of shuffling the training data each epoch, and initializing the trainable parameters of each of the layers.
