add dummy broader impact section

--- a/futurework.tex
+++ b/futurework.tex
@@ -5,3 +5,8 @@ The main goal of NumNN.jl is a software tool for simulating -in a simple but gen
 So far, the developed software package depends on predefined derivatives and gradients of the activation functions (each activation function has a derivative provided under the same name with the letter \mintinline{julia}{"d"} prefixed to its name like \mintinline{julia}{relu} and \mintinline{julia}{drelu}). The upcoming versions will be able to do automated derivation and gradient techniques.
 
 More activation functions will be added and many new loss functions to serve the easiness and generality of this package. In the current status, NumNN.jl only accepts one input layer and one output layer, and multiple input and output layers will be also supported in the upcoming versions.
+
+
+\section*{Boarder Impact}
+
+Since this paper does not represent any new methods of approaches of neural networks applications and implementations, this section (as it is mandatory by conference style checklist to be present) is not applicable for this work.
