edit Boarder Impact

--- a/futurework.tex
+++ b/futurework.tex
@@ -9,4 +9,4 @@ More activation functions will be added and many new loss functions to serve the
 
 \section*{Boarder Impact}
 
-Since this paper does not represent any new methods of approaches of neural networks applications and implementations, this section (as it is mandatory by conference style checklist to be present) is not applicable for this work.
+Since this paper does not present any new method or approach of neural networks' applications and implementations, this section (as its present is mandatory by conference style checklist) is not applicable for this work.
