change the title for preprint

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %\documentclass[onecolumn]{IEEEtran}
 \documentclass{article}
-\usepackage[nonatbib]{neurips_2020}
+\usepackage[nonatbib,preprint]{neurips_2020}
 %\usepackage{natbib}
 \usepackage[utf8]{inputenc}
 
@@ -55,7 +55,7 @@
 \usepackage{array}
 \usepackage{multirow}
 
-\title{NumNN.jl: A Toolkit for Simulating Deeplearning Networks Supporting Non-Conventional Arithmetic}
+\title{NumNN.jl: Conventional Neural Networks on Non-Conventional Arithmetic}
 
 \author{%\IEEEauthorblockN
 	{Mohammad~Hizzani}\\
